Bug 850441 - Allow BlockOnload/UnblockOnload from both the current and pending request. r=khuey