content/base/src/nsImageLoadingContent.cpp
@@ -626,13 +626,17 @@ NS_IMETHODIMP nsImageLoadingContent::ForceReload()
 NS_IMETHODIMP
 nsImageLoadingContent::BlockOnload(imgIRequest* aRequest)
 {
-  if (aRequest != mCurrentRequest) {
+  if (aRequest == mCurrentRequest) {
+    NS_ASSERTION(!(mCurrentRequestFlags & REQUEST_BLOCKS_ONLOAD),
+                 "Double BlockOnload!?");
+    mCurrentRequestFlags |= REQUEST_BLOCKS_ONLOAD;
+  } else if (aRequest == mPendingRequest) {
+    NS_ASSERTION(!(mPendingRequestFlags & REQUEST_BLOCKS_ONLOAD),
+                 "Double BlockOnload!?");
+    mPendingRequestFlags |= REQUEST_BLOCKS_ONLOAD;
+  } else {
     return NS_OK;
   }
-
-  NS_ASSERTION(!(mCurrentRequestFlags & REQUEST_BLOCKS_ONLOAD),
-               "Double BlockOnload!?");
-  mCurrentRequestFlags |= REQUEST_BLOCKS_ONLOAD;
 
   nsIDocument* doc = GetOurCurrentDoc();
   if (doc) {
@@ -645,13 +649,17 @@ nsImageLoadingContent::BlockOnload(imgIRequest* aRequest)
 NS_IMETHODIMP
 nsImageLoadingContent::UnblockOnload(imgIRequest* aRequest)
 {
-  if (aRequest != mCurrentRequest) {
+  if (aRequest == mCurrentRequest) {
+    NS_ASSERTION(mCurrentRequestFlags & REQUEST_BLOCKS_ONLOAD,
+                 "Double UnblockOnload!?");
+    mCurrentRequestFlags &= ~REQUEST_BLOCKS_ONLOAD;
+  } else if (aRequest == mPendingRequest) {
+    NS_ASSERTION(mPendingRequestFlags & REQUEST_BLOCKS_ONLOAD,
+                 "Double UnblockOnload!?");
+    mPendingRequestFlags &= ~REQUEST_BLOCKS_ONLOAD;
+  } else {
     return NS_OK;
   }
-
-  NS_ASSERTION(mCurrentRequestFlags & REQUEST_BLOCKS_ONLOAD,
-               "Double UnblockOnload!?");
-  mCurrentRequestFlags &= ~REQUEST_BLOCKS_ONLOAD;
 
   nsIDocument* doc = GetOurCurrentDoc();
   if (doc) {
